eventos de dominio
Co-authored-by: Bernardo Estigarribia <mestigarribia@frba.utn.edu.ar>